--- a/index.html
+++ b/index.html
@@ -10,26 +10,17 @@
   <div class="panel">
     <h1>Unit Converter</h1>      
     <form >    
-      <select  id="measure"><!-- 
-        <option value="2">Length</option>
-        <option value="1">Weight</option>
-        <option value="0">Temperature</option> -->
+      <select  id="measure">
       </select>        
       <label for="convertFrom">Unit to Convert from</label>
       <div>
-        <select id="convertFrom"><!-- 
-          <option value="0">pies</option>
-          <option value="1">centimetros</option>
-          <option value="2">metros</option> -->
+        <select id="convertFrom">
         </select>            
         <input type="number" placeholder="0" id="valueToConvert" required>
       </div>        
       <label for="convertTo">Unit to Convert to</label>
       <div>
-        <select id="convertTo"><!-- 
-          <option value="0">pies</option>
-          <option value="1">centimetros</option>
-          <option value="2">metros</option> -->
+        <select id="convertTo">
         </select>
         <div id="newValue"></div>            
       </div>
